# microservice_delivery

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py
db/: consumer.py  db.py  parcel.py  redis.py
logic/: parcel.py  periodic_task.py  producer.py
migrations/: README  env.py
migrations/versions/: 3a74ffff8d72_initial.py
models/: parcel.py
routers/: depends.py  parcel.py
schemas/: parcel.py
tests/: conftest.py  test_parcel.py
