[tool.poetry]
name = "microservice-delivery"
version = "0.1.0"
description = "Service global delivery"
authors = ["simonsnag <simonsnag@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
pytest = "^8.3.2"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
aiomysql = "^0.2.0"
aio-pika = "^9.4.3"
aioredis = "^2.0.1"
celery = "^5.4.0"
aiohttp = "^3.10.3"
httpx = "^0.27.0"
cryptography = "^43.0.0"
starlette = "^0.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
